# prefect-associate-certification-course

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
pacc/: deploy_managed.py  fetch_weather.py  mega_flow.py
