[tool.poetry]
name = "pacc"
version = "0.1.0"
description = ""
authors = ["Sami Jawhar <sami@thecybermonk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.8"

httpx = "^0.26.0"
pandas = {extras = ["output-formatting"], version = "^2.2.0"}
prefect = "^2.14.21"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
prefect-docker = "^0.4.4"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-watch = "^4.2.0"
unimport = "^1.2.1"

[tool.poetry.scripts]
flowtest = "pacc.flowtest:test_flow"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
